--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ add_subdirectory(3rd/json_struct)
 add_subdirectory(3rd/spdlog)
 add_subdirectory(3rd/glm)
 
+set(TINYGLTF_BUILD_LOADER_EXAMPLE OFF)
+set(TINYGLTF_INSTALL OFF)
+add_subdirectory(3rd/tinygltf)
+
 set(KTX_FEATURE_TESTS OFF)
 add_subdirectory(3rd/KTX-Software)
 
@@ -76,6 +80,7 @@ target_link_libraries(Pixel PUBLIC
     ${VULKAN_SDK}/lib/vulkan-1.lib
     spirv-reflect-static
     ktx
+    tinygltf
 )
 
 if (WINDOW_USE_GLFW)
