add triangle example

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,8 +1,3 @@
 add_subdirectory(Texture)
 add_subdirectory(Deferred)
-
-add_executable(Triangle Triangle.cpp)
-   
-target_link_libraries(Triangle PRIVATE
-    Pixel
-)
+add_subdirectory(Triangle)
