--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Texture)
 add_subdirectory(Deferred)
 add_subdirectory(Triangle)
 add_subdirectory(RenderPassEditor)
+add_subdirectory(ComputeRayTracing)
