--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(Texture)
-add_subdirectory(Deferred)
+# add_subdirectory(Texture)
+# add_subdirectory(Deferred)
 add_subdirectory(Triangle)
-add_subdirectory(RenderPassEditor)
+# add_subdirectory(RenderPassEditor)
+add_subdirectory(ComputeRayTracing)
