--- a/Examples/Triangle/CMakeLists.txt
+++ b/Examples/Triangle/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(Triangle main.cpp)
 target_link_libraries(Triangle PRIVATE
     Pixel
 )
+
+configure_file("triangle.json" "triangle.json" COPYONLY)
