--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ project(Pixel)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(VULKAN_SDK "C:/VulkanSDK/1.3.239.0")
-set(BOOST_ROOT "C:/Users/Mario/Documents/boost_1_81_0/stage")
-set(GLSL_VALIDATOR "${VULKAN_SDK}/Bin/glslangValidator")
+set(VULKAN_SDK "/Users/mario/VulkanSDK/1.3.239.0/macOS")
+set(BOOST_ROOT "/opt/homebrew/Cellar/boost/1.82.0_1")
+set(GLSL_VALIDATOR "${VULKAN_SDK}/bin/glslangValidator")
+set(PIXEL_BUILD_TEST ON)
 
 set(WINDOW_USE_GLFW ON)
 
@@ -17,6 +18,7 @@ include_directories(3rd/imgui)
 
 file(GLOB IMGUI_SOURCE_FILES
     "3rd/imgui/*.cpp"
+    "3rd/imgui/*.h"
 )
 
 find_package(Boost COMPONENTS date_time filesystem system)
@@ -77,7 +79,7 @@ target_link_libraries(Pixel PUBLIC
     json_struct
     spdlog
     glm
-    ${VULKAN_SDK}/lib/vulkan-1.lib
+    ${VULKAN_SDK}/lib/libvulkan.dylib
     spirv-reflect-static
     ktx
     tinygltf
@@ -89,19 +91,9 @@ target_link_libraries(Pixel PRIVATE
 )
 endif()
 
-# add_subdirectory(3rd/googletest)
-# enable_testing()
-# add_executable(
-#   framegraph_test
-#   framegraph_test.cpp
-# )
-
-# target_link_libraries(
-#   framegraph_test
-#   GTest::gtest_main
-# )
-
-# include(GoogleTest)
-# gtest_discover_tests(framegraph_test)
+if (PIXEL_BUILD_TEST)
+add_subdirectory(3rd/googletest)
+add_subdirectory(Test)
+endif()
 
 add_subdirectory(Examples)
