--- a/Examples/Texture/CMakeLists.txt
+++ b/Examples/Texture/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(Texture main.cpp)
 target_link_libraries(Texture PRIVATE
     Pixel
 )
+
+configure_file("texture.json" "texture.json" COPYONLY)
