--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,4 +1,6 @@
+add_subdirectory(ImGUI)
 add_subdirectory(Texture)
 add_subdirectory(Deferred)
 add_subdirectory(Triangle)
 add_subdirectory(RenderPassEditor)
+add_subdirectory(ComputeRayTracing)
