--- a/Examples/Triangle/CMakeLists.txt
+++ b/Examples/Triangle/CMakeLists.txt
@@ -4,4 +4,15 @@ target_link_libraries(Triangle PRIVATE
     Pixel
 )
 
-configure_file("triangle.json" "triangle.json" COPYONLY)
+file(GLOB_RECURSE GLSL_SOURCE_FILES
+    "Shaders/*.frag"
+    "Shaders/*.vert"
+    "../ImGUI/Shaders/ui.vert"
+    "../ImGUI/Shaders/ui.frag"
+)
+
+APPEND_GLSL_TO_TARGET(Triangle "${GLSL_SOURCE_FILES}")
+
+configure_file("Shaders/triangle.json" "Shaders/triangle.json")
+configure_file("Shaders/imgui.json" "Shaders/imgui.json")
+
